learn/fcc/product-page/style.css
:root {
  --darker-color: #301E1A;
  --dark-color: #A04B26;
  --light-color: #B7833A;
  --highlight-color: #B4B943;
  --subtle-color: #79ABA2;
}

/* ------------
Genetal Styling
--------------- */
html{
  font-size: 16px;
  font-family: Lato, sans-serif;
}

body {
  margin: 0;
}


/* ----------------
Nav Bars Styling
-------------------*/
header {
  font-size: 0.9rem;
}

header nav {
  display: flex;
  height: 60px;
  /* border: 2px solid green; */
}

/* clearing format in nav bar lists */
header ul{
  margin: 0;
  padding: 0; 
  list-style-type: none;
}

/* style nav bar sections (first children) */
.bar-section {
  display: flex;
  align-items: center;
  /* border: 2px solid pink; */
}

.bar-section a{
  display: inline-block;
  font-size: 0.75rem;
  font-weight: bold;
  font-variant: small-caps;
  letter-spacing: .3em;
  /* border: 2px solid salmon; */
}

/* Styling nav bar text links */

.bar-section li a {
  padding: .4em .6em  ;
  text-decoration: none;
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
  transition: border-bottom-color 1s; 
}

.bar-section li a:hover,
.bar-section li a:focus{
  border-bottom-color: initial;
}


/* Section: menu-button */
#menu-button {
  display: none;
}


/*Section: Logo*/

#logo-section {
  flex: 1;
  padding-left: .5em;
}

#logo-section a {
  padding: 0 .5em;
  width: 48px;
  height: 48px;
  background-color: darkorchid;
  background: url("./assets/coffee_logo.svg") no-repeat center;
  
}

/* Section: Company */

#company-section {
  flex: 3;
  justify-content: space-around;
}

#company-section a {
  background: transparent;
  color: var(--dark-color);
}



/* Section: User Bar */
#user-section {
  flex: 1;
  justify-content: end;
  padding-right: .5em;
}

#user-section a{
  padding: 0 .5em;
  width: 24px;
  height: 24px;
  opacity: .6;
  transition: opacity .5s ease; 
}

#user-section a:hover,
#user-section a:focus{
  opacity: 1;
}



#user-profile {
  background: url('./assets/profile.svg') no-repeat center;
}

#shopping-cart {
  background: url('./assets/shopping_cart.svg') no-repeat center;
}

#user-messages {
  background: url('./assets/mail.svg') no-repeat center;
}


/* Second Bar Style */

#store-bar {
  justify-content: space-around;
  background: var(--dark-color)
}

#store-bar .bar-section {
  flex-wrap: wrap;
  width: 60%;
  justify-content: space-around;
}

#store-bar a {
  background: transparent;
  color: #fff;
}


/* -------------------------
G A L L E R Y   S T Y L E
----------------------------*/
#populars-gallery {
  margin: 0 auto;
  padding: 1em 1em;
  height: calc(100vh - (2.5  * 60px ));
  min-height: 480px;
  width: 100%;
  max-width: 960px;
  box-sizing: border-box;
}

.popular-product {
  display: flex;  
  
  height: calc(100% - 60px);
  /* background: pink; */
  box-sizing: border-box;
  /* border: 2px solid green; */
}

.popular-product.hidden {
  display: none;
}

.product-image {
  flex: 5;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: .5em;
  /* background: greenyellow; */
}

.product-image img {
  display: inline-block;
  max-width: 100%;
  max-height: 100%;

}

.product-description {
  flex: 3;
  padding: .5em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* background: #79ABA2; */
  height: 100%;
  box-sizing: border-box;
}

.product-description h1 {
  margin: .5em 0;
  font-size: 1.8em;
  text-transform: uppercase;
  letter-spacing: .1em;
}

.product-description h2 {
  order: -1;
  font-size: .8em;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: .2em; 
}

.product-description p {
  font-style: italic;
}

.product-description button {
  margin: 1em 0;
  padding: .8em 1em;
  font: inherit;
  font-size: .8em;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: .2em;
  align-self: flex-start;
  background: var(--dark-color);
  color: white; 
  border: none;
  box-shadow: 0 0 2px rgba(0, 0, 0, .5);
}

.product-description button:hover,
.product-description button:focus {
  background: var(--highlight-color);
  color: black;
  cursor: pointer;
}

#gallery-controls {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 60px;

  /* border: 2px solid blue; */
}

.controls-section {
  
  /* border: 2px solid blue; */
}


.seek-button {
  width: 34px;
  height: 34px;
  opacity: .5;
  cursor: pointer;
}

.seek-button:hover,
.seek-button:focus{
  width: 36px;
  height: 36px;
  opacity: .8;
}

#previous {
  background: url("./assets/arrow_left.svg") no-repeat center / contain;
}

#next {
  background: url("./assets/arrow_right.svg") no-repeat center / contain;
}

#pagination {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 120px;
  height: 48px;
}

.page-indicator {
  width: 6px;
  height: 6px;
  border: 1px solid var(--dark-color);
  opacity: .7;
  border-radius: 50%;
}

.page-indicator.current {
  background: var(--highlight-color);
  box-shadow: 0 0 4px var(--dark-color);
}




/* ------------------------
M E D I A    Q U E R I E S
--------------------------*/

@media (max-width: 680px) {
  /* -------------
  Style nav bars 
  ---------------*/

  /* Bar 1 */

  #logo-section {
    padding-left: 0;
  }

  #company-section {
    flex: 7;
  }

  #user-section {
    flex: 2;
    justify-content: space-around;
  }

  #logo-section {
    justify-content: space-around;
  }

  #user-section a,
  #logo-section a {
    margin: 0;
  }

  #user-section {
    padding-right: 0;
  }


  /* Bar 2 */

  #store-bar .bar-section {
    width: 100%;
  }
}

@media (max-width: 540px) {
  #menu-section {
    flex: 1;
    justify-content: center;
  }

  #menu-section a {
    width: 36px;
    height: 36px;
    padding: 0 .5em;
    background: url('./assets/menu.svg') no-repeat center / contain;
  }

  #menu-section a.opened {
    background-image: url('./assets/close.svg');
  }


  #logo-section {
    flex: 2;
  }


  #user-section {
    flex: 1;
  }

  #company-section {
    display: none;
    position: absolute;
    top: 60px;
    flex-direction: column;
    z-index: 100;
    width: 100%;  
    background: white;
    border-top: 8px solid var(--dark-color);
  }

  #company-section li {
    width: 100%;
  }

  #company-section a {
    width: 100%;
    text-align: center;
    line-height: 3;
  }

  .bar-section li a {
    transition: text-shadow .5s ease;
  }

  .bar-section li a:hover,
  .bar-section li a:focus {
    border-bottom-color: transparent;
    text-shadow: 0 0 2px;
  }


  /* Gallery [screen <= 540px] */

  .popular-product{
    flex-direction: column;
  }

  .product-image {
    flex: 1;
    padding: 0;
    max-height: 50%;
  }
  
  .product-description {
    flex: 1;
    align-items: center;
  }

  .product-description h1 {
    font-size: 1.6em;
  }

  .product-description p {
    display: none;
  }

  .product-description button{
    align-self: initial;
  }
  
}

